[tool.poetry]
name = "docqa-stream"
version = "0.1.1"
description = ""
authors = ["ma2za <mazzapaolo2019@gmail.com>"]
readme = "README.md"
packages = [{ include = "src/docqa_stream" }]

[tool.poetry.dependencies]
python = "<3.14,>=3.11.0"
fastapi = "^0.127.0"
uvicorn = "^0.23.2"
unstructured = { extras = ["pdf"], version = "^0.22.6" }
weaviate-client = "^3.23.0"
langchain = "^1.2.0"
openai = "^0.27.9"
httpx = "^0.28.1"
pytest = ">=7.4,<10.0"
pyyaml = "^6.0.1"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
